# gitops-demo

./: Cargo.toml  Dockerfile  Makefile  Rocket.toml  hello-gitops-0.1.0.tgz  hello-gitops-0.1.1.tgz  hello-gitops-0.1.2.tgz  hello-gitops-0.1.4.tgz  hello-gitops-0.1.5.tgz  hello-gitops-0.1.6.tgz  hello-gitops-0.1.7.tgz  hello-gitops-0.1.8.tgz  hello-gitops-0.1.9.tgz  hello-gitops-rust-0.1.10.tgz  hello-gitops-rust-0.1.11.tgz  hello-gitops-rust-0.1.12.tgz  hello-gitops-rust-0.1.13.tgz  hello-gitops-rust-0.1.14.tgz  hello-gitops-rust-0.1.15.tgz  hello-gitops-rust-0.1.16.tgz  hello-gitops-rust-0.1.17.tgz  hello-gitops-rust-0.1.18.tgz  hello-gitops-rust-0.1.19.tgz  hello-gitops-rust-0.1.20.tgz  hello-gitops-rust-0.1.21.tgz  hello-gitops-rust-0.1.22.tgz  hello-gitops-rust-0.1.23.tgz  hello-gitops-rust-0.1.24.tgz  hello-gitops-rust-0.1.25.tgz  hello-gitops-rust-0.1.26.tgz  index.yaml
.github/workflows/: chart.yml  go.yml  main.yml  pr.yml  sync_argo.yml
argo/: .gitignore
argo/dev/: Chart.yaml  hello-gitops-dev.yaml  hello-gitops-rust-dev.yaml  values.yaml
argo/staging/: hello-gitops-staging.yaml
helm/hello-gitops/: Chart.yaml  values.yaml
helm/hello-gitops/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  service_monitor.yaml  serviceaccount.yaml
helm/hello-gitops/templates/tests/: test-connection.yaml
src/: main.rs
