[package]
name = "hello-gitops"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
hyper = { version = "0.14.20", features = ["full"]}
prometheus = { version = "0.13.2"}
lazy_static = { version = "1.4.0"}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
pretty_env_logger = "0.4.0"
