[package]
name = "hello-gitops"
version = "0.0.11"
edition = "2021"
publish = false

[dependencies]
prometheus = { version = "0.13", default-features = false }
rocket_prometheus = "0.10.0-rc.3"
once_cell = "1.2.0"
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
